# openclaw-3dprint

./: .env.example  .gitignore  README.md  README_ZH.md  SKILL.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  ARCHITECTURE_ZH.md
pipeline/: __main__.py  bot.py  feishu_bot.py  feishu_client.py  orchestrator.py  printer_queue.py
pipeline/models/: job.py
pipeline/services/: bambu_mqtt.py  bambu_printer.py  meshy_client.py  openai_client.py  printer_monitor.py  tripo_client.py  windows_ssh.py
pipeline/stages/: llm_interpret.py  mesh_generate.py  print_job.py  slice.py  windows_prepare.py
pipeline/utils/: config.py
scripts/: 3dprint  ftp-upload-proxy.py  mqtt-proxy.py  run-pipeline.zsh
tests/: test_config.py  test_e2e_pipeline.py  test_job_model.py
